fix: left join 적용 및 쿼리 수정에 따른 변화